force-app/main/default/objects/Water_Compliance__c/Water_Compliance__c.object-meta.xml
<CustomObject>
    <label>Water Compliance</label>
    <nameField>
        <label>Water Compliance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Water Compliance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>