force-app/main/default/objects/Water_Compliance__c/fields/Aquifer_or_Basin__c.field-meta.xml
<CustomField>
    <fullName>Aquifer_or_Basin__c</fullName>
    <label>Aquifer or Basin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>