force-app/main/default/objects/Water_Compliance__c/fields/Country_Area__c.field-meta.xml
<CustomField>
    <fullName>Country_Area__c</fullName>
    <label>Country/Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>