force-app/main/default/objects/Water_Compliance__c/fields/Description_significance__c.field-meta.xml
<CustomField>
    <fullName>Description_significance__c</fullName>
    <inlineHelpText>Description of penalty, incident, regulatory violation, significance and resolution</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>