force-app/main/default/objects/Water_Compliance__c/fields/Financial_value_of_penalty__c.field-meta.xml
<CustomField>
    <fullName>Financial_value_of_penalty__c</fullName>
    <label>Financial value of penalty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>