force-app/main/default/objects/Water_Compliance__c/fields/Organization_Asset__c.field-meta.xml
<CustomField>
    <fullName>Organization_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization Asset</label>
    <referenceTo>sustain_app__Asset__c</referenceTo>
    <relationshipName>Water_Regulatory_Incident</relationshipName>
    <type>Lookup</type>
</CustomField>