force-app/main/default/objects/Water_Compliance__c/fields/Type_of_incident__c.field-meta.xml
<CustomField>
    <fullName>Type_of_incident__c</fullName>
    <label>Type of incident</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spillage, leakage, or discharge of potential water pollutant</fullName>
            </value>
            <value>
                <fullName>Failure to monitor effluent</fullName>
            </value>
            <value>
                <fullName>Effluent limit exceedances</fullName>
            </value>
            <value>
                <fullName>Abstraction without a permit or abstraction that exceeded permit</fullName>
            </value>
            <value>
                <fullName>Other non-compliance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>