force-app/main/default/objects/Water_Compliance__c/fields/Type_of_Penalty__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Penalty__c</fullName>
    <label>Type of Penalty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fine</fullName>
            </value>
            <value>
                <fullName>Enforcement Order</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>